<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragments.ProfileFragment">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/iv_profile" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfileImage"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/username" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsername"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/btn_green"
        android:text="@string/btn_edit"
        android:textColor="@android:color/white" />

</RelativeLayout>