<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.DetailActivity">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@id/ivPostImage"
        android:layout_margin="8dp"
        tools:srcCompat="@drawable/ic_instagram_user_filled_24" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="center"
        tools:srcCompat="@tools:sample/backgrounds/scenic[4]" />

    <TextView
        android:id="@+id/tvHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPostImage"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPostImage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/created_at" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfileImage"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/post_content" />

</RelativeLayout>